<resources>
    <string name="app_name">Ssenstone_bank</string>
    <string name="pay">페이</string>
    <string name="do_pay">페이실행</string>
    <string name="pay_title">페 이</string>
    <string name="transfer">이체</string>
    <string name="do_transfer">이체하기</string>
    <string name="transfer_title">이 체</string>
    <string name="lend">대출</string>
    <string name="do_lend">대출하기</string>
    <string name="insurance">보험</string>
    <string name="do_insurance">보험신청</string>
    <string name="insurance_title">보 험</string>
    <string name="payment_method">구매 방법</string>
    <string name="choose_card">카드 선택</string>

    <string name="please_choose_payment">구매 방법을 선택해주세요</string>
    <string name="please_choose_card">구매 방법을 선택해주세요</string>
    <string name="please_choose_bank">은행을 선택해주세요</string>

    <string name="credit_card">신용카드</string>
    <string name="ssen_pay">쎈 페이</string>
    <string name="payco">페이코</string>
    <string name="kakao_pay">카카오 페이</string>

    <string name="credit_kb">국민카드</string>
    <string name="credit_shinhan">신한카드</string>
    <string name="credit_samsung">삼성카드</string>
    <string name="credit_woori">우리카드</string>

    <string name="bank_kb">국민은행</string>
    <string name="bank_shinhan">신한은행</string>
    <string name="bank_woori">우리은행</string>

    <string name="purchase">결제하기</string>

    <string name="transfer_amount">이체 금액</string>
    <string name="choose_bank">은행 선택</string>
    <string name="receiver_account_num">상대방 계좌번호</string>
    <string name="receiver_name">받는 분</string>

    <string name="lend_title">대 출</string>

    <string name="birthday">생년월일</string>

    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>

    <string name="currency_unit">만원</string>

    <string name="name_example">홍길동</string>
</resources>
