<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/insurance_title"
            style="@style/title"
            android:text="@string/insurance_title" />

        <ScrollView
            style="@style/scroll_view"
            android:layout_below="@id/insurance_title">

            <RelativeLayout
                android:id="@+id/insurance_container"
                style="@style/white_container"
                android:layout_below="@+id/insurance_title">

                <TableLayout
                    android:id="@+id/insurance_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp">

                    <TableRow>

                        <TextView
                            android:text="2018-01-01  14:00"
                            android:textSize="30sp" />
                    </TableRow>

                    <TextView
                        android:layout_marginTop="20dp"
                        android:text="보험 상품/가입자 정보"
                        android:textSize="30sp" />

                    <TableRow>

                        <Spinner
                            android:id="@+id/insuranceName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:textSize="50sp" />
                    </TableRow>

                    <TableRow>

                        <Spinner
                            android:id="@+id/insuranceType"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:textSize="50sp">

                        </Spinner>
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:text="@string/birthday"
                            android:textSize="30sp" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:hint="e.g. 930329"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/gender"
                            android:textSize="30sp" />

                        <RadioGroup
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/male"
                                android:textSize="30sp" />

                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_weight="1"
                                android:text="@string/female"
                                android:textSize="30sp" />
                        </RadioGroup>
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/apply_insurance"
                    style="@style/do_button"
                    android:layout_below="@id/insurance_info"
                    android:text="@string/do_insurance" />


            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>