<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pay_title"
            style="@style/title"
            android:text="@string/pay_title" />

        <ScrollView
            style="@style/scroll_view"
            android:layout_below="@id/pay_title">

            <RelativeLayout
                android:id="@+id/pay_container"
                style="@style/white_container">

                <TableLayout
                    android:id="@+id/pay_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp">

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="2018-01-01  14:00"
                            android:textColor="#000000"
                            android:textSize="30sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="오버워치"
                            android:textColor="#000000"
                            android:textSize="30sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="45,000원"
                            android:textColor="#000000"
                            android:textSize="30sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="블리자드 액티비전 코리아"
                            android:textColor="#6F6F6F"
                            android:textSize="28sp" />
                    </TableRow>

                    <TableRow
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="3dp"
                            android:background="@drawable/gray_separator">

                        </View>
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/payment_method"
                            android:textColor="#6F6F6F"
                            android:textSize="28sp" />
                    </TableRow>

                    <TableRow
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <Spinner
                            android:id="@+id/spinner_payment_method"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/please_choose_payment"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/row_credit_title"
                        android:visibility="gone">

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/choose_card"
                            android:textColor="#6F6F6F"
                            android:textSize="28sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/row_credit_choose"
                        android:visibility="gone">

                        <Spinner
                            android:id="@+id/spinner_credit_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/please_choose_card"
                            android:textSize="16sp" />
                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/purchase_button"
                    style="@style/do_button"
                    android:layout_below="@id/pay_info"
                    android:text="@string/purchase" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>