<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_below="@id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/first_row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/pay_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_square_blue"
                    android:textColor="@color/white"
                    android:textSize="38.4dp"
                    android:text="@string/pay" />

                <Button
                    android:id="@+id/transfer_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_square_green"
                    android:textColor="@color/white"
                    android:textSize="38.4dp"
                    android:text="@string/transfer" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/lend_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_square_green"
                    android:textSize="38.4dp"
                    android:textColor="@color/white"
                    android:text="@string/lend" />

                <Button
                    android:id="@+id/insurance_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_square_blue"
                    android:textColor="@color/white"
                    android:textSize="38.4dp"
                    android:text="@string/insurance" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
